force-app/main/default/objects/BatalhaDoContato__c/BatalhaDoContato__c.object-meta.xml
<CustomObject>
    <description>Usado como junção entre os objetos contato e Batalha</description>
    <label>Batalha do Contato</label>
    <nameField>
        <displayFormat>Bat-{0000}</displayFormat>
        <label>Batalha do Contato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batalhas do contato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>