force-app/main/default/objects/BatalhaDoContato__c/fields/Batalha__c.field-meta.xml
<CustomField>
    <fullName>Batalha__c</fullName>
    <label>Batalha</label>
    <referenceTo>Batalha__c</referenceTo>
    <relationshipLabel>Batalhas do contato</relationshipLabel>
    <relationshipName>BatalhasDoContato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>